finished first draft of the specification

--- a/doc/spec/libfcns.tex
+++ b/doc/spec/libfcns.tex
@@ -4,7 +4,6 @@
     \par\noindent%
     \IfEqCase*{#1}{%
     {s.translate}{\hypertarget{s.translate}{\noindent \mbox{\hspace{0.015\linewidth}} {\bf Signature:} \mbox{\PFAc \{"s.translate":$\!$ [s, oldchars, newchars]\} \vspace{0.2 cm} \\} \vspace{0.2 cm} \\ \rm \begin{tabular}{p{0.01\linewidth} l p{0.8\linewidth}} & \PFAc s \rm & string \\  & \PFAc oldchars \rm & string \\  & \PFAc newchars \rm & string \\  & {\it (returns)} & string \\ \end{tabular} \vspace{0.3 cm} \\ \mbox{\hspace{0.015\linewidth}} {\bf Description:} For each character in {\PFAp s} that is also in {\PFAp oldchars} with some index {\PFAc i}, replace it with the character at index {\PFAc i} in {\PFAp newchars}.  Any character in {\PFAp s} that is not in {\PFAp oldchars} is unchanged.  Any index {\PFAc i} that is greater than the length of {\PFAp newchars} is replaced with nothing. \vspace{0.2 cm} \\ \mbox{\hspace{0.015\linewidth}} {\bf Details:} \vspace{0.2 cm} \\ \mbox{\hspace{0.045\linewidth}} \begin{minipage}{0.935\linewidth}This is the behavior of the the Posix command {\PFAc tr}, where {\PFAp s} takes the place of standard input and {\PFAp oldchars} and {\PFAp newchars} are the {\PFAc tr} commandline options.\end{minipage} \vspace{0.2 cm} \vspace{0.2 cm} \\ }}%
-    {a.countPredicate}{\hypertarget{a.countPredicate}{\noindent \mbox{\hspace{0.015\linewidth}} {\bf Signature:} \mbox{\PFAc \{"a.countPredicate":$\!$ [a, predicate]\} \vspace{0.2 cm} \\} \vspace{0.2 cm} \\ \rm \begin{tabular}{p{0.01\linewidth} l p{0.8\linewidth}} & \PFAc a \rm & array of any {\PFAtp A} \\  & \PFAc predicate \rm & function ({\PFAtp A}) $\to$ boolean \\  & {\it (returns)} & int \\ \end{tabular} \vspace{0.3 cm} \\ \mbox{\hspace{0.015\linewidth}} {\bf Description:} Count the number of times {\PFAp predicate} is satisfied in {\PFAp a}. \vspace{0.2 cm} \\ }}%
     {a.argminN}{\hypertarget{a.argminN}{\noindent \mbox{\hspace{0.015\linewidth}} {\bf Signature:} \mbox{\PFAc \{"a.argminN":$\!$ [a, n]\} \vspace{0.2 cm} \\} \vspace{0.2 cm} \\ \rm \begin{tabular}{p{0.01\linewidth} l p{0.8\linewidth}} & \PFAc a \rm & array of any {\PFAtp A} \\  & \PFAc n \rm & int \\  & {\it (returns)} & array of int \\ \end{tabular} \vspace{0.3 cm} \\ \mbox{\hspace{0.015\linewidth}} {\bf Description:} Return the indexes of the {\PFAp n} lowest values in {\PFAp a} (as defined by Avro's sort order). \vspace{0.2 cm} \\ \mbox{\hspace{0.015\linewidth}} {\bf Details:} \vspace{0.2 cm} \\ \mbox{\hspace{0.045\linewidth}} \begin{minipage}{0.935\linewidth}If any values are not unique, their indexes will be returned in ascending order.\end{minipage} \vspace{0.2 cm} \vspace{0.2 cm} \\ \mbox{\hspace{0.015\linewidth}} {\bf Runtime Errors:} \vspace{0.2 cm} \\ \mbox{\hspace{0.045\linewidth}} \begin{minipage}{0.935\linewidth}If {\PFAp a} is empty, an ``empty array'' runtime error is raised. \vspace{0.1 cm} \\ If {\PFAp n} is negative, an ``n < 0'' runtime error is raised.\end{minipage} \vspace{0.2 cm} \vspace{0.2 cm} \\ }}%
     {a.geomean}{\hypertarget{a.geomean}{\noindent \mbox{\hspace{0.015\linewidth}} {\bf Signature:} \mbox{\PFAc \{"a.geomean":$\!$ [a]\} \vspace{0.2 cm} \\} \vspace{0.2 cm} \\ \rm \begin{tabular}{p{0.01\linewidth} l p{0.8\linewidth}} & \PFAc a \rm & array of double \\  & {\it (returns)} & double \\ \end{tabular} \vspace{0.3 cm} \\ \mbox{\hspace{0.015\linewidth}} {\bf Description:} Return the geometric mean of numbers in {\PFAp a}. \vspace{0.2 cm} \\ \mbox{\hspace{0.015\linewidth}} {\bf Details:} \vspace{0.2 cm} \\ \mbox{\hspace{0.045\linewidth}} \begin{minipage}{0.935\linewidth}Returns {\PFAc NaN} if the array is empty.\end{minipage} \vspace{0.2 cm} \vspace{0.2 cm} \\ }}%
     {s.lower}{\hypertarget{s.lower}{\noindent \mbox{\hspace{0.015\linewidth}} {\bf Signature:} \mbox{\PFAc \{"s.lower":$\!$ [s]\} \vspace{0.2 cm} \\} \vspace{0.2 cm} \\ \rm \begin{tabular}{p{0.01\linewidth} l p{0.8\linewidth}} & \PFAc s \rm & string \\  & {\it (returns)} & string \\ \end{tabular} \vspace{0.3 cm} \\ \mbox{\hspace{0.015\linewidth}} {\bf Description:} Convert {\PFAp s} to lower-case. \vspace{0.2 cm} \\ }}%
@@ -107,7 +106,7 @@
     {m.round}{\hypertarget{m.round}{\noindent \mbox{\hspace{0.015\linewidth}} {\bf Signature:} \mbox{\PFAc\{"m.round":$\!$ [x]\}} \vspace{0.2 cm} \\ \rm \begin{tabular}{p{0.01\linewidth} l p{0.8\linewidth}} & \PFAc x \rm & float \\ & {\it (returns)} & int \\ \end{tabular} \vspace{0.2 cm} \\ \mbox{\hspace{1.5 cm}}or \vspace{0.2 cm} \\ \begin{tabular}{p{0.01\linewidth} l p{0.8\linewidth}} & \PFAc x \rm & double \\ & {\it (returns)} & long \\ \end{tabular} \vspace{0.3 cm} \\ \mbox{\hspace{0.015\linewidth}} {\bf Description:} Return the closest whole number to {\PFAp x}, rounding up if the fractional part is exactly one-half. \vspace{0.2 cm} \\ \mbox{\hspace{0.015\linewidth}} {\bf Details:} \vspace{0.2 cm} \\ \mbox{\hspace{0.045\linewidth}} \begin{minipage}{0.935\linewidth}Equal to {\PFAf \hyperlink{m.floor}{m.floor}} of ({\PFAp x} + 0.5).\end{minipage} \vspace{0.2 cm} \vspace{0.2 cm} \\ \mbox{\hspace{0.015\linewidth}} {\bf Runtime Errors:} \vspace{0.2 cm} \\ \mbox{\hspace{0.045\linewidth}} \begin{minipage}{0.935\linewidth}Integer results outside of -2147483648 and 2147483647 (inclusive) produce an ``int overflow'' runtime error. \vspace{0.1 cm} \\ Long-integer results outside of -9223372036854775808 and 9223372036854775807 (inclusive) produce a ``long overflow'' runtime error.\end{minipage} \vspace{0.2 cm} \vspace{0.2 cm} \\ }}%
     {a.sort}{\hypertarget{a.sort}{\noindent \mbox{\hspace{0.015\linewidth}} {\bf Signature:} \mbox{\PFAc \{"a.sort":$\!$ [a]\} \vspace{0.2 cm} \\} \vspace{0.2 cm} \\ \rm \begin{tabular}{p{0.01\linewidth} l p{0.8\linewidth}} & \PFAc a \rm & array of any {\PFAtp A} \\  & {\it (returns)} & array of {\PFAtp A} \\ \end{tabular} \vspace{0.3 cm} \\ \mbox{\hspace{0.015\linewidth}} {\bf Description:} Return an array with the same elements as {\PFAp a} but in ascending order (as defined by Avro's sort order). \vspace{0.2 cm} \\ \mbox{\hspace{0.015\linewidth}} {\bf Details:} \vspace{0.2 cm} \\ \mbox{\hspace{0.045\linewidth}} \begin{minipage}{0.935\linewidth}Note: {\PFAp a} is not changed in-place; this is a side-effect-free function.\end{minipage} \vspace{0.2 cm} \vspace{0.2 cm} \\ }}%
     {a.mean}{\hypertarget{a.mean}{\noindent \mbox{\hspace{0.015\linewidth}} {\bf Signature:} \mbox{\PFAc \{"a.mean":$\!$ [a]\} \vspace{0.2 cm} \\} \vspace{0.2 cm} \\ \rm \begin{tabular}{p{0.01\linewidth} l p{0.8\linewidth}} & \PFAc a \rm & array of double \\  & {\it (returns)} & double \\ \end{tabular} \vspace{0.3 cm} \\ \mbox{\hspace{0.015\linewidth}} {\bf Description:} Return the arithmetic mean of numbers in {\PFAp a}. \vspace{0.2 cm} \\ \mbox{\hspace{0.015\linewidth}} {\bf Details:} \vspace{0.2 cm} \\ \mbox{\hspace{0.045\linewidth}} \begin{minipage}{0.935\linewidth}Returns {\PFAc NaN} if the array is empty.\end{minipage} \vspace{0.2 cm} \vspace{0.2 cm} \\ }}%
-    {a.count}{\hypertarget{a.count}{\noindent \mbox{\hspace{0.015\linewidth}} {\bf Signature:} \mbox{\PFAc\{"a.count":$\!$ [haystack, needle]\}} \vspace{0.2 cm} \\ \rm \begin{tabular}{p{0.01\linewidth} l p{0.8\linewidth}} & \PFAc haystack \rm & array of any {\PFAtp A} \\  & \PFAc needle \rm & array of {\PFAtp A} \\ & {\it (returns)} & int \\ \end{tabular} \vspace{0.2 cm} \\ \mbox{\hspace{1.5 cm}}or \vspace{0.2 cm} \\ \begin{tabular}{p{0.01\linewidth} l p{0.8\linewidth}} & \PFAc haystack \rm & array of any {\PFAtp A} \\  & \PFAc needle \rm & {\PFAtp A} \\ & {\it (returns)} & int \\ \end{tabular} \vspace{0.3 cm} \\ \mbox{\hspace{0.015\linewidth}} {\bf Description:} Count the number of times {\PFAp needle} appears in {\PFAp haystack}. \vspace{0.2 cm} \\ }}%
+    {a.count}{\hypertarget{a.count}{\noindent \mbox{\hspace{0.015\linewidth}} {\bf Signature:} \mbox{\PFAc\{"a.count":$\!$ [haystack, needle]\}} \vspace{0.2 cm} \\ \rm \begin{tabular}{p{0.01\linewidth} l p{0.8\linewidth}} & \PFAc haystack \rm & array of any {\PFAtp A} \\  & \PFAc needle \rm & array of {\PFAtp A} \\ & {\it (returns)} & int \\ \end{tabular} \vspace{0.2 cm} \\ \mbox{\hspace{1.5 cm}}or \vspace{0.2 cm} \\ \begin{tabular}{p{0.01\linewidth} l p{0.8\linewidth}} & \PFAc haystack \rm & array of any {\PFAtp A} \\  & \PFAc needle \rm & {\PFAtp A} \\ & {\it (returns)} & int \\ \end{tabular} \vspace{0.2 cm} \\ \mbox{\hspace{1.5 cm}}or \vspace{0.2 cm} \\ \begin{tabular}{p{0.01\linewidth} l p{0.8\linewidth}} & \PFAc haystack \rm & array of any {\PFAtp A} \\  & \PFAc needle \rm & function ({\PFAtp A}) $\to$ boolean \\ & {\it (returns)} & int \\ \end{tabular} \vspace{0.3 cm} \\ \mbox{\hspace{0.015\linewidth}} {\bf Description:} Count the number of times {\PFAp needle} appears in {\PFAp haystack} or the number of times the {\PFAp needle} function evaluates to {\PFAc true}. \vspace{0.2 cm} \\ }}%
     {a.median}{\hypertarget{a.median}{\noindent \mbox{\hspace{0.015\linewidth}} {\bf Signature:} \mbox{\PFAc \{"a.median":$\!$ [a]\} \vspace{0.2 cm} \\} \vspace{0.2 cm} \\ \rm \begin{tabular}{p{0.01\linewidth} l p{0.8\linewidth}} & \PFAc a \rm & array of any {\PFAtp A} \\  & {\it (returns)} & {\PFAtp A} \\ \end{tabular} \vspace{0.3 cm} \\ \mbox{\hspace{0.015\linewidth}} {\bf Description:} Return the value that is in the center of a sorted version of {\PFAp a}. \vspace{0.2 cm} \\ \mbox{\hspace{0.015\linewidth}} {\bf Details:} \vspace{0.2 cm} \\ \mbox{\hspace{0.045\linewidth}} \begin{minipage}{0.935\linewidth}If {\PFAp a} has an odd number of elements, the median is the exact center of the sorted array.  If {\PFAp a} has an even number of elements and is a {\PFAc float} or {\PFAc double}, the median is the average of the two elements closest to the center of the sorted array.  For any other type, the median is the left (first) of the two elements closest to the center of the sorted array.\end{minipage} \vspace{0.2 cm} \vspace{0.2 cm} \\ \mbox{\hspace{0.015\linewidth}} {\bf Runtime Errors:} \vspace{0.2 cm} \\ \mbox{\hspace{0.045\linewidth}} \begin{minipage}{0.935\linewidth}If {\PFAp a} is empty, an ``empty array'' runtime error is raised.\end{minipage} \vspace{0.2 cm} \vspace{0.2 cm} \\ }}%
     {m.ceil}{\hypertarget{m.ceil}{\noindent \mbox{\hspace{0.015\linewidth}} {\bf Signature:} \mbox{\PFAc \{"m.ceil":$\!$ [x]\} \vspace{0.2 cm} \\} \vspace{0.2 cm} \\ \rm \begin{tabular}{p{0.01\linewidth} l p{0.8\linewidth}} & \PFAc x \rm & double \\  & {\it (returns)} & double \\ \end{tabular} \vspace{0.3 cm} \\ \mbox{\hspace{0.015\linewidth}} {\bf Description:} Return the smallest (closest to negative infinity, not closest to zero) whole number that is greater than or equal to the input. \vspace{0.2 cm} \\ \mbox{\hspace{0.015\linewidth}} {\bf Details:} \vspace{0.2 cm} \\ \mbox{\hspace{0.045\linewidth}} \begin{minipage}{0.935\linewidth}The domain of this function is the whole real line; no input is invalid.\end{minipage} \vspace{0.2 cm} \vspace{0.2 cm} \\ }}%
     {m.e}{\hypertarget{m.e}{\noindent \mbox{\hspace{0.015\linewidth}} {\bf Signature:} \mbox{\PFAc \{"m.e":$\!$ []\} \vspace{0.2 cm} \\} \vspace{0.2 cm} \\ \rm \begin{tabular}{p{0.01\linewidth} l p{0.8\linewidth}} & {\it (returns)} & double \\ \end{tabular} \vspace{0.3 cm} \\ \mbox{\hspace{0.015\linewidth}} {\bf Description:} The double-precision number that is closer than any other to $e$, the base of natural logarithms. \vspace{0.2 cm} \\ }}%
